--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,38 +6,48 @@
     <title>Title</title>
 </head>
 <body>
-    <div class="container">
-        <div>
-            <h1>Hello Sparta!</h1>
-            <p>게시판 만들기!</p>
-            <p>
-                <a href="/board">게시판 입장!</a>
+<div class="container">
+    <div>
+        <h1>Hello Sparta!</h1>
+        <h2>스파르타 게시판에 입장해주세요!</h2>
 
-            </p>
-        </div>
+
+        <p><a href="/board">게시판 입장!</a></p>
+<!--        <form id="my_form" method="post" action="/user/logout">-->
+<!--            <a id="logout-text" href="javascript:{}" onclick="document.getElementById('my_form').submit();">로그아웃</a>-->
+
+<!--        </form>-->
+
     </div>
-    <ol>
-        <il>
-            <details>
-                <summary>기능 구현</summary>
-                <ul>
-                    <li>게시판 입장 클릭 시 전체목록 조회</li>
-                    <li>제목 클릭 시 단일 객체 조회</li>
-                    <li>수정 기능 추가</li>
-                    <li>삭제 기능 추가</li>
-
-                </ul>
-
-
-            </details>
-
-
-
-        </il>
-
+</div>
+<ol>
+    <il>
+        <details>
+            <summary>기능 구현 == 확인해주세요!</summary>
+            <ul>
+                <li>게시판 입장 클릭 시 전체목록 조회</li>
+                <li>제목 클릭 시 단일 객체 조회</li>
+                <li>수정 기능 추가</li>
+                <li>삭제 기능 추가</li>
+                <li>회원가입 및 로그인 기능 구현 추가</li>
+                <li>회원가입 정규표현식 추가 / 중복 불가</li>
+                <li>카카오톡 소셜 로그인 기능 추가</li>
+                <li>글 작성 본인만 수정/삭제 권한 가능하게끔 기능 구현</li>
+                <li>댓글 기능 추가</li>
+                <li>댓글 수정/삭제 기능 추가</li>
+                <li>글 작성자 본인만 댓글 수정/삭제 가능하게끔 기능 구현</li>
 
 
-    </ol>
+            </ul>
+
+
+        </details>
+
+
+    </il>
+
+
+</ol>
 
 
 </body>
