--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -2,6 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -104,7 +107,7 @@
         width: 50%;
         border-bottom: 2px solid black;
     }
-
+    textarea,
     form[method="POST"] textarea {
         min-height: 500px;
         width: 100%;
@@ -116,6 +119,7 @@
     }
 
 </style>
+
 <script>
     function boardDelete(){
 
@@ -125,18 +129,37 @@
             type:"DELETE",
             url:"/board/delete/"+index,
             success: function(response){
-                alert("삭제가 완료되었습니다");
+                alert("삭제가 완료되었습니다.");
                 window.location.href="/board";
             }
         });
 
     }
 
+    function commentDelete(CommentId){
+
+        let boardId = $('#index').val();
+        const check = confirm("정말 삭제하시겠습니까?");
+        if(check === true){
+            $.ajax({
+                type:"DELETE",
+                url:"/comment/delete/"+CommentId,
+                success: function (response){
+                    alert("삭제가 완료되었습니다.")
+                    window.location.href="/board/"+boardId;
+
+                }
+
+            });
+
+        }
+    }
+
 </script>
 
-
-
 </head>
+
+
 <body>
 
 <section>
@@ -166,7 +189,7 @@
         <div>
             <a href="/board"><button>목록</button></a>
         </div>
-        <div>
+        <div th:if="${status}">
             <!--<a th:href="@{'/board/'+${List.id}}"> -->
             <a th:href="@{'/board/modify/'+${boardOne.id}}">
                 <button>수정</button>
@@ -175,9 +198,59 @@
 
         </div>
     </div>
+    <!-- 댓글-->
+    <div>
+        <form action="/comment/write" method="post">
+
+            <input type="hidden" th:name="boardId" th:value="${index}"/>
+            <textarea name="contents" id="contents" placeholder="댓글을 입력해주세요!" style="min-height: 200px" required="required"></textarea>
+            <button type="submit" style="margin-bottom: 20px">등록</button>
+        </form>
+    </div>
 
 
+    <div class="card">
+        <div class="card-header">
+            Comments
+        </div>
+        <div class="card-body" th:each="comments:${comments}">
+            <h5 class="card-title" th:text="${comments.username}"></h5>
+            <p class="card-text" th:text="${comments.content}"></p>
+
+            <div th:if="${#strings.equals(username,comments.username)}" style="display: flex">
+                <a th:href="@{'/comment/'+${comments.id}+'/board/'+${index}}">
+                    <button>수정</button>
+                </a>
+
+                    <button th:onclick="|javascript:commentDelete('${comments.id}')|">삭제</button>
+
+
+                <!-- 자바스크립트 함수 변수값 전달 -->
+                <!--th:onclick="|javascript:commentDelete('${comments.id}')|" -->
+
+
+                <!--
+                  <a th:href="@{'/comment/'+${comments.id}+'/delete/'+${index}}">
+                    <button>삭제</button>
+                    </a>
+
+                -->
+            </div>
+        </div>
+    </div>
 </section>
+
+
+
+<!--
+
+
+-->
+
+
+
+
+
 
 </body>
 </html>
